--- a/assets/css/style.bundle.css
+++ b/assets/css/style.bundle.css
@@ -58613,6 +58613,16 @@ em {
   border: 0;
 }
 
+.tabs-style-shape li:first-child .nav-link span {
+  /* padding-left: 2em; */
+  /* border-radius: 30px 0 0 0; */
+}
+
+.tabs-style-shape li:last-child .nav-link span {
+  /* padding-right: 2em;
+	border-radius: 0 30px 0 0; */
+}
+
 .tabs-style-shape li .nav-link svg {
   position: absolute;
   left: 100%;
