--- a/assets/css/style.bundle.css
+++ b/assets/css/style.bundle.css
@@ -32671,16 +32671,20 @@ fieldset:disabled .btn {
   --kt-component-hover-bg: #2B2B40;
   --kt-component-checked-color: #ffffff;
   --kt-component-checked-bg: #009ef7;
-  --kt-box-shadow-xs: 0 0.1rem 0.75rem 0.25rem rgba(0, 0, 0, 0.05);
-  --kt-box-shadow-sm: 0 0.1rem 1rem 0.25rem rgba(0, 0, 0, 0.05);
-  --kt-box-shadow: 0 0.5rem 1.5rem 0.5rem rgba(0, 0, 0, 0.075);
-  --kt-box-shadow-lg: 0 1rem 2rem 1rem rgba(0, 0, 0, 0.1);
+  --kt-box-shadow-xs: 0 0.1rem 0.75rem 0.25rem
+  rgba(0, 0, 0, 0.05);
+  --kt-box-shadow-sm: 0 0.1rem 1rem 0.25rem
+  rgba(0, 0, 0, 0.05);
+  --kt-box-shadow: 0 0.5rem 1.5rem 0.5rem
+  rgba(0, 0, 0, 0.075);
+  --kt-box-shadow-lg: 0 1rem 2rem 1rem
+  rgba(0, 0, 0, 0.1);
   --kt-headings-color: #FFFFFF;
   --kt-table-color: #FFFFFF;
   --kt-table-bg: transparent;
   --kt-table-striped-color: #FFFFFF;
   --kt-table-striped-bg:
-    rgba(27, 27, 41, 0.75);
+  rgba(27, 27, 41, 0.75);
   --kt-table-accent-bg: transparent;
   --kt-table-active-color: #FFFFFF;
   --kt-table-active-bg: #1b1b29;
@@ -32688,11 +32692,12 @@ fieldset:disabled .btn {
   --kt-table-hover-bg: #1b1b29;
   --kt-table-border-color: #2B2B40;
   --kt-table-caption-color: #565674;
-  --kt-table-loading-message-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
+  --kt-table-loading-message-box-shadow: 0px 0px 30px
+  rgba(0, 0, 0, 0.3);
   --kt-table-loading-message-bg: #2B2B40;
   --kt-table-loading-message-color: #92929F;
   --kt-input-btn-focus-color:
-    rgba(0, 158, 247, 0.25);
+  rgba(0, 158, 247, 0.25);
   --kt-input-btn-focus-box-shadow: ;
   --kt-input-btn-focus-color-opacity: 0.25;
   --kt-input-color: #92929F;
@@ -32723,7 +32728,7 @@ fieldset:disabled .btn {
   --kt-form-check-label-color: #565674;
   --kt-form-check-label-color-checked: #92929F;
   --kt-form-check-input-active-filter:
-    brightness(90%);
+  brightness(90%);
   --kt-form-check-input-bg: transparent;
   --kt-form-check-input-bg-solid: #2B2B40;
   --kt-form-check-input-border: 1px solid #323248;
@@ -32733,50 +32738,52 @@ fieldset:disabled .btn {
   --kt-form-check-input-checked-bg-color: #009ef7;
   --kt-form-check-input-checked-border-color: #009ef7;
   --kt-form-check-input-checked-bg-image:
-    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 11' width='13' height='11' fill='none'%3e%3cpath d='M11.0426 1.02893C11.3258 0.695792 11.8254 0.655283 12.1585 0.938451C12.4917 1.22162 12.5322 1.72124 12.249 2.05437L5.51985 9.97104C5.23224 10.3094 4.72261 10.3451 4.3907 10.05L0.828197 6.88335C0.50141 6.59288 0.471975 6.09249 0.762452 5.7657C1.05293 5.43891 1.55332 5.40948 1.88011 5.69995L4.83765 8.32889L11.0426 1.02893Z' fill='%23ffffff'/%3e%3c/svg%3e");
+  url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 11' width='13' height='11' fill='none'%3e%3cpath d='M11.0426 1.02893C11.3258 0.695792 11.8254 0.655283 12.1585 0.938451C12.4917 1.22162 12.5322 1.72124 12.249 2.05437L5.51985 9.97104C5.23224 10.3094 4.72261 10.3451 4.3907 10.05L0.828197 6.88335C0.50141 6.59288 0.471975 6.09249 0.762452 5.7657C1.05293 5.43891 1.55332 5.40948 1.88011 5.69995L4.83765 8.32889L11.0426 1.02893Z' fill='%23ffffff'/%3e%3c/svg%3e");
   --kt-form-check-radio-checked-bg-image:
-    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23ffffff'/%3e%3c/svg%3e");
+  url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23ffffff'/%3e%3c/svg%3e");
   --kt-form-check-input-indeterminate-color: #ffffff;
   --kt-form-check-input-indeterminate-bg-color: #009ef7;
   --kt-form-check-input-indeterminate-border-color: #009ef7;
   --kt-form-check-input-indeterminate-bg-image:
-    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23ffffff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
+  url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23ffffff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
   --kt-form-check-input-disabled-opacity: 0.5;
   --kt-form-check-label-disabled-opacity: 0.5;
   --kt-form-check-btn-check-disabled-opacity: 0.65;
   --kt-form-switch-color:
-    rgba(255, 255, 255, 0.25);
+  rgba(255, 255, 255, 0.25);
   --kt-form-switch-color-solid: #A1A5B7;
   --kt-form-switch-bg-image:
-    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%28255, 255, 255, 0.25%29'/%3e%3c/svg%3e");
+  url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%28255, 255, 255, 0.25%29'/%3e%3c/svg%3e");
   --kt-form-switch-bg-image-solid:
-    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23A1A5B7'/%3e%3c/svg%3e");
+  url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23A1A5B7'/%3e%3c/svg%3e");
   --kt-form-switch-focus-color: #474761;
   --kt-form-switch-focus-bg-image:
-    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23474761'/%3e%3c/svg%3e");
+  url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23474761'/%3e%3c/svg%3e");
   --kt-form-switch-checked-color: #ffffff;
   --kt-form-switch-checked-bg-image:
-    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23ffffff'/%3e%3c/svg%3e");
+  url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23ffffff'/%3e%3c/svg%3e");
   --kt-input-group-addon-color: #92929F;
   --kt-input-group-addon-bg: #1b1b29;
   --kt-input-group-addon-border-color: #323248;
   --kt-form-select-color: #ccc;
   --kt-form-select-bg:
-    rgb(46 52 70);
+  rgb(46 52 70);
   --kt-form-select-disabled-color: ;
   --kt-form-select-disabled-bg: #2B2B40;
   --kt-form-select-disabled-border-color: #323248;
   --kt-form-select-indicator-color: #6D6D80;
   --kt-form-select-indicator:
-    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%236D6D80' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
+  url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%236D6D80' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
   --kt-form-select-border-color: #323248;
-  --kt-form-select-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+  --kt-form-select-box-shadow: inset 0 1px 2px
+  rgba(0, 0, 0, 0.075);
   --kt-form-select-focus-border-color: #474761;
-  --kt-form-select-focus-box-shadow: 0 0 0 0.25rem rgba(0, 158, 247, 0.25);
+  --kt-form-select-focus-box-shadow: 0 0 0 0.25rem
+  rgba(0, 158, 247, 0.25);
   --kt-form-file-button-color: #92929F;
   --kt-form-file-button-bg: #1b1b29;
   --kt-form-file-button-hover-bg:
-    shade-color(#1b1b29, 5%);
+  shade-color(#1b1b29, 5%);
   --kt-nav-tabs-border-color: #2B2B40;
   --kt-nav-tabs-link-hover-border-color: #2B2B40 #2B2B40 #2B2B40;
   --kt-nav-tabs-link-active-color: #92929F;
@@ -32787,10 +32794,11 @@ fieldset:disabled .btn {
   --kt-dropdown-color: #FFFFFF;
   --kt-dropdown-bg: #1e1e2d;
   --kt-dropdown-divider-bg: #1b1b29;
-  --kt-dropdown-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
+  --kt-dropdown-box-shadow: 0px 0px 30px
+  rgba(0, 0, 0, 0.3);
   --kt-dropdown-link-color: #FFFFFF;
   --kt-dropdown-link-hover-color:
-    shade-color(#FFFFFF, 10%);
+  shade-color(#FFFFFF, 10%);
   --kt-dropdown-link-hover-bg: #2B2B40;
   --kt-dropdown-link-active-color: #ffffff;
   --kt-dropdown-link-active-bg: #009ef7;
@@ -32808,7 +32816,7 @@ fieldset:disabled .btn {
   --kt-pagination-hover-bg: #2B2B40;
   --kt-pagination-hover-border-color: transparent;
   --kt-pagination-active-color: #ffffff;
-  --kt-pagination-active-bg: #009ef7;
+  --kt-pagination-active-bg: #389aff;
   --kt-pagination-active-border-color: transparent;
   --kt-pagination-disabled-color: #474761;
   --kt-pagination-disabled-bg: transparent;
@@ -32830,42 +32838,50 @@ fieldset:disabled .btn {
   --kt-accordion-icon-color: #FFFFFF;
   --kt-accordion-icon-active-color: #009ef7;
   --kt-accordion-button-icon:
-    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23FFFFFF'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23FFFFFF'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   --kt-accordion-button-active-icon:
-    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23009ef7'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23009ef7'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   --kt-tooltip-color: #CDCDDE;
   --kt-tooltip-bg: #2B2B40;
   --kt-tooltip-opacity: 1;
-  --kt-tooltip-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
+  --kt-tooltip-box-shadow: 0px 0px 30px
+  rgba(0, 0, 0, 0.3);
   --kt-popover-bg: #2B2B40;
   --kt-popover-border-color: #2B2B40;
-  --kt-popover-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
+  --kt-popover-box-shadow: 0px 0px 30px
+  rgba(0, 0, 0, 0.3);
   --kt-popover-header-bg: #2B2B40;
   --kt-popover-header-color: #CDCDDE;
   --kt-popover-header-border-color: #323248;
   --kt-popover-body-color: #CDCDDE;
-  --kt-dropdown-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
+  --kt-dropdown-box-shadow: 0px 0px 30px
+  rgba(0, 0, 0, 0.3);
   --kt-dropdown-bg: #1e1e2d;
   --kt-toast-color: ;
   --kt-toast-background-color:
-    rgba(0, 0, 0, 0.85);
-  --kt-toast-box-shadow: 0 0.5rem 1.5rem 0.5rem rgba(0, 0, 0, 0.075);
+  rgba(0, 0, 0, 0.85);
+  --kt-toast-box-shadow: 0 0.5rem 1.5rem 0.5rem
+  rgba(0, 0, 0, 0.075);
   --kt-toast-header-color: #6D6D80;
   --kt-toast-header-background-color:
-    rgba(0, 0, 0, 0.85);
+  rgba(0, 0, 0, 0.85);
   --kt-toast-header-border-color:
-    rgba(255, 255, 255, 0.05);
+  rgba(255, 255, 255, 0.05);
   --kt-badge-color: #1e1e2d;
   --kt-modal-bg: #1e1e2d;
   --kt-modal-color: ;
   --kt-modal-border-color: ;
-  --kt-modal-box-shadow: 0 0.25rem 0.5rem rgba(255, 255, 255, 0.05);
+  --kt-modal-box-shadow: 0 0.25rem 0.5rem
+  rgba(255, 255, 255, 0.05);
   --kt-modal-content-color: ;
   --kt-modal-content-bg: #1e1e2d;
   --kt-modal-content-border-color: ;
-  --kt-modal-content-box-shadow: 0 0.25rem 0.5rem rgba(255, 255, 255, 0.05);
-  --kt-modal-content-box-shadow-xs: 0 0.25rem 0.5rem rgba(255, 255, 255, 0.1);
-  --kt-modal-content-box-shadow-sm-up: 0 0.5rem 1rem rgba(255, 255, 255, 0.1);
+  --kt-modal-content-box-shadow: 0 0.25rem 0.5rem
+  rgba(255, 255, 255, 0.05);
+  --kt-modal-content-box-shadow-xs: 0 0.25rem 0.5rem
+  rgba(255, 255, 255, 0.1);
+  --kt-modal-content-box-shadow-sm-up: 0 0.5rem 1rem
+  rgba(255, 255, 255, 0.1);
   --kt-modal-header-border-color: #2B2B40;
   --kt-modal-footer-border-color: #2B2B40;
   --kt-modal-backdrop-bg: #000000;
@@ -32875,7 +32891,7 @@ fieldset:disabled .btn {
   --kt-list-group-color: #FFFFFF;
   --kt-list-group-bg: #000000;
   --kt-list-group-border-color:
-    rgba(255, 255, 255, 0.125);
+  rgba(255, 255, 255, 0.125);
   --kt-list-group-hover-bg: #f5f8fa;
   --kt-list-group-active-color: #ffffff;
   --kt-list-group-active-bg: #009ef7;
@@ -32888,7 +32904,8 @@ fieldset:disabled .btn {
   --kt-list-group-action-active-bg: #2B2B40;
   --kt-thumbnail-bg: #1e1e2d;
   --kt-thumbnail-border-color: #2B2B40;
-  --kt-thumbnail-box-shadow: 0 0.1rem 1rem 0.25rem rgba(0, 0, 0, 0.05);
+  --kt-thumbnail-box-shadow: 0 0.1rem 1rem 0.25rem
+  rgba(0, 0, 0, 0.05);
   --kt-figure-caption-color: #6D6D80;
   --kt-breadcrumb-bg: ;
   --kt-breadcrumb-divider-color: #6D6D80;
@@ -32899,37 +32916,43 @@ fieldset:disabled .btn {
   --kt-carousel-custom-bullet-indicator-active-bg-color: #6D6D80;
   --kt-btn-close-color: #ffffff;
   --kt-btn-close-bg:
-    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
+  url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
   --kt-code-bg: #2B2B40;
-  --kt-code-box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.08);
+  --kt-code-box-shadow: 0px 3px 9px
+  rgba(0, 0, 0, 0.08);
   --kt-code-color: #b93993;
   --kt-offcanvas-border-color: ;
   --kt-offcanvas-bg-color: #1e1e2d;
   --kt-offcanvas-color: ;
-  --kt-offcanvas-box-shadow: 0 0.25rem 0.5rem rgba(255, 255, 255, 0.1);
+  --kt-offcanvas-box-shadow: 0 0.25rem 0.5rem
+  rgba(255, 255, 255, 0.1);
   --kt-offcanvas-backdrop-bg: #000000;
   --kt-offcanvas-backdrop-opacity: 0.4;
   --kt-code-bg: #2B2B40;
-  --kt-code-box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.08);
+  --kt-code-box-shadow: 0px 3px 9px
+  rgba(0, 0, 0, 0.08);
   --kt-code-color: #b93993;
   --kt-symbol-label-color: #CDCDDE;
   --kt-symbol-label-bg: #1b1b29;
   --kt-symbol-border-color:
-    rgba(255, 255, 255, 0.5);
+  rgba(255, 255, 255, 0.5);
   --kt-bullet-bg-color: #474761;
   --kt-scrolltop-opacity: 0;
   --kt-scrolltop-opacity-on: 0.3;
   --kt-scrolltop-opacity-hover: 1;
-  --kt-scrolltop-box-shadow: 0 0.5rem 1.5rem 0.5rem rgba(0, 0, 0, 0.075);
+  --kt-scrolltop-box-shadow: 0 0.5rem 1.5rem 0.5rem
+  rgba(0, 0, 0, 0.075);
   --kt-scrolltop-bg-color: #009ef7;
   --kt-scrolltop-bg-color-hover: #009ef7;
   --kt-scrolltop-icon-color: #ffffff;
   --kt-scrolltop-icon-color-hover: #ffffff;
-  --kt-drawer-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
+  --kt-drawer-box-shadow: 0px 0px 30px
+  rgba(0, 0, 0, 0.1);
   --kt-drawer-bg-color: #1e1e2d;
   --kt-drawer-overlay-bg-color:
-    rgba(0, 0, 0, 0.4);
-  --kt-menu-dropdown-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
+  rgba(0, 0, 0, 0.4);
+  --kt-menu-dropdown-box-shadow: 0px 0px 30px
+  rgba(0, 0, 0, 0.3);
   --kt-menu-dropdown-bg-color: #283046;
   --kt-menu-heading-color: #565674;
   --kt-menu-link-color-hover: #009ef7;
@@ -32940,17 +32963,19 @@ fieldset:disabled .btn {
   --kt-menu-link-bg-color-show: #2B2B40;
   --kt-menu-link-bg-color-here: #2B2B40;
   --kt-menu-link-bg-color-active: #2B2B40;
-  --kt-feedback-popup-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
+  --kt-feedback-popup-box-shadow: 0px 0px 30px
+  rgba(0, 0, 0, 0.3);
   --kt-feedback-popup-background-color: #1e1e2d;
   --kt-scrollbar-color: #2B2B40;
   --kt-scrollbar-hover-color: #27273a;
   --kt-overlay-bg:
-    rgba(255, 255, 255, 0.05);
+  rgba(255, 255, 255, 0.05);
   --kt-blockui-overlay-bg:
-    rgba(255, 255, 255, 0.05);
+  rgba(255, 255, 255, 0.05);
   --kt-rating-color-default: #474761;
   --kt-rating-color-active: #FFAD0F;
-  --kt-ribbon-label-box-shadow: 0px -1px 5px 0px rgba(255, 255, 255, 0.1);
+  --kt-ribbon-label-box-shadow: 0px -1px 5px 0px
+  rgba(255, 255, 255, 0.1);
   --kt-ribbon-label-bg: #009ef7;
   --kt-ribbon-label-border-color: #005d91;
   --kt-ribbon-clip-bg: #f5f8fa;
@@ -33007,7 +33032,7 @@ h6,
   transition: none !important;
 }
 
-html:not([data-theme=dark]) .theme-dark-show {
+html:not([data-theme=dark]) .theme-light-show {
   display: none !important;
 }
 
@@ -33019,9 +33044,10 @@ html:not([data-theme=dark]) .theme-light-bg-body {
   background-color: var(--kt-body-bg) !important;
 }
 
-[data-theme=dark] .theme-light-show {
+[data-theme=dark] .theme-dark-show {
   display: none !important;
 }
+
 
 [data-theme=dark] .theme-dark-bg-transparent {
   background-color: transparent !important;
@@ -58037,8 +58063,16 @@ body:not(.bg-body) {
   max-width: 100%;
 }
 
-.logo-header {
+.logo-header,
+.logo-light {
   height: 35px;
+  width: 165px;
+  object-fit: contain;
+}
+
+.logo-light,
+.loader-light {
+  display: none;
 }
 
 .links-header {
@@ -58057,10 +58091,10 @@ body:not(.bg-body) {
 .links-header a::after {
   content: '';
   position: absolute;
-  bottom: -17px;
+  bottom: -19px;
   right: 0;
   width: 100%;
-  height: 2px;
+  height: 3px;
   background: transparent;
 }
 
@@ -58868,7 +58902,7 @@ em {
 
 .table {
   border-collapse: separate;
-  border-spacing: 0 8px;
+  border-spacing: 0 8px !important;
   padding: 0 7px;
   border-radius: 7px;
   margin-bottom: 10px;
@@ -58917,7 +58951,7 @@ em {
 .table tbody tr {
   border-radius: 5px;
   box-shadow: rgb(99 99 99 / 10%) 0px 2px 8px 0px;
-  background-color: #ffffff12;
+  background-color: #ffffff12 !important;
 }
 
 .table tbody tr td:first-child {
@@ -59292,7 +59326,7 @@ body::-webkit-scrollbar {
   z-index: 2;
   display: flex;
   gap: 10px;
-  top: 50%;
+  top: 65%;
 }
 
 .btns-fixed-right .btn--fixed {
@@ -59316,7 +59350,7 @@ body::-webkit-scrollbar {
   margin: 0 auto;
   display: block;
   max-height: 500px;
-  opacity: .8;
+  opacity: .4;
 }
 
 .not-found {
@@ -59484,4 +59518,16 @@ font-size: 20px;
   height: 200px;
   margin: 0 !important;
   margin-top: 20px !important;
+}
+
+div.dataTables_wrapper div.dataTables_filter input:focus {
+  background: #3e4456;
+  border-color: #3e4456;
+  color: #fff;
+}
+
+div.dataTables_wrapper div.dataTables_length select:focus {
+  background-color: #3e4456 !important;
+  border-color: #3e4456 !important;
+  color: #fff !important;
 }
